# klass-mobile-backend

./: .dockerignore  .env.example  .gitignore  .phpunit.result.cache  Cargo.toml  Dockerfile  Dockerfile.dev  MEDIA_GENERATION_MANUAL_VERIFICATION.md  MIGRATION_PLAN.md  PERSONALIZED_PROJECT_RECOMMENDATIONS.md  README.md  RENDER_API_SMOKE_TEST.md  _ide_helper_imagick.php  build.rs  cargo_check_error.txt  composer.json  docker-compose.e2e.yml  docker-compose.yml  render.yaml  temp_log.txt
.sqlx/: README.md  query-7a195b05b0088def81a0ce77d46c2bbf47141faf6c757a48cabb2d76b3ef5543.json
bootstrap/: app.php
config/: content_integrity.php  cors.php  filesystems.php  logging.php  personalized_project_recommendations.php  queue.php  sanctum.php  sentry.php  services.php  view.php
docker/: entrypoint.sh  nginx.conf  supervisord.conf
e2e/: README.md  run-e2e-test.sh  start-all.sh  teardown.sh  test_spec.py
migrations/: 20260712000001_create_users_table.sql  20260712000002_create_subjects_and_sub_subjects_tables.sql  20260712000003_create_topics_table.sql  20260712000004_create_contents_table.sql  20260712000005_create_marketplace_tasks_table.sql  20260712000006_create_student_progress_table.sql  20260712000007_create_personal_access_tokens_table.sql  20260712000008_create_activity_logs_table.sql  20260712000009_create_homepage_sections_table.sql  20260712000010_create_media_files_table.sql  20260712000011_create_system_settings_table.sql  20260712000012_create_recommended_projects_table.sql  20260712000013_create_media_generations_table.sql  20260712000014_create_system_recommendation_assignments_table.sql  20260712000015_create_freelancer_matches_table.sql  20260712000016_seed_subjects_sub_subjects_from_taxonomy.sql  20260712000100_create_llm_cache_entries_table.sql  20260712000101_create_llm_rate_limit_policies_table.sql  20260712000102_create_llm_rate_limit_buckets_table.sql  20260712000103_create_llm_request_ledger_table.sql  20260712000104_create_llm_price_catalog_table.sql  20260712000105_seed_deepseek_price.sql  20260712000106_drop_marketplace_tasks_status_check.sql  20260712000107_add_generation_job_tracking.sql  20260718000000_alter_personal_access_tokens_to_timestamptz.sql  20260718000001_alter_media_generations_to_timestamptz.sql  20260720000001_add_clarification_fields.sql  20260723000001_seed_recommended_projects_ppt.sql  20260723000002_seed_recommended_projects_for_render.sql  20260723000003_fix_null_timestamps.sql  run_missing_migrations.sql  (+2 more)
src/: error.rs  (+5 more)
(+361 files in other folders)
